--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><a href="#ai-domains">AI Domains</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#training">Training</a></li>
-          <li><a href="blog.php">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li><a href="#contact">Contact Us</a></li>
           <!-- <li class="menu-has-children"><a href="">Log In</a>
             <ul>
